# scaling-crl

./: .gitignore  collect_results.py  config.py  env_setup.md  eval.py  pyproject.toml  render.py  train.py
conf/: checkpoint.yaml  config.py  eval.yaml  network.yaml  optimizer.yaml  replay.yaml  rl.yaml  wandb.yaml
conf/experiment/: ant_ball_d32_s2000.yaml  ant_ball_d8_s2000.yaml  ant_big_maze_d32_s2000.yaml  ant_big_maze_d8_s2000.yaml  ant_d32_s2000.yaml  ant_d8_s2000.yaml  ant_hardest_maze_d32_s2000.yaml  ant_hardest_maze_d8_s2000.yaml  ant_push_d32_s2000.yaml  ant_push_d8_s2000.yaml  ant_u_maze_d32_s2000.yaml  ant_u_maze_d8_s2000.yaml  arm_binpick_easy_d32_s1000.yaml  arm_binpick_easy_d32_s2000.yaml  arm_binpick_easy_d8_s1000.yaml  arm_binpick_easy_d8_s2000.yaml  arm_binpick_hard_d32_s1000.yaml  arm_binpick_hard_d32_s2000.yaml  arm_binpick_hard_d8_s1000.yaml  arm_binpick_hard_d8_s2000.yaml  arm_grasp_d32_s1000.yaml  (+26 more)
crl/: algorithm.py  buffer.py  networks.py  types.py
infra/: README.md  all_experiments.yaml  experiments.yaml  launcher.py  monitor.sh  monitor_to_wandb.py  snapshot.py  sweep.py  test_resume.yaml
note/: 0617.md  1.md  STATUS.md  config_schema.md  infra-design.md  nano4_guide.md  note2.md  openreview.md  paper.md  reddit.md
results_data/: fig12_scaling_limits.json  fig1_main.json  fig7_batch_size.json
scripts/: job.slurm  job_multi.sh  job_parallel.sh  run_8.sh  run_8gpu.sh  run_all.sh  run_batch.sh  test_env.py  test_infra.sh  test_multi.py  test_multi2.py
utils/: checkpoint.py  env_factory.py  evaluator.py  logging.py  wandb_defaults.py
(+2 files in other folders)
